RAIN-7206 : DSS Finance Overview card Alignment issue fixed

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/summary.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/summary.scss
@@ -25,5 +25,5 @@
   }
 }
 .summary-card-margin{
-  margin:0px 0px 20px !important;
+  margin:0 24px 20px 0px !important;
 }
